.kube/platform-web-core/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-01-27T01:38:20Z","generation":1,"labels":{"app":" platform-web-core","tier":"backend"},"name":" platform-web-core","namespace":"platform","resourceVersion":"3396807","uid":"1a500c5f-3995-4e5a-b93d-feffe1a9be1c"},"spec":{"progressDeadlineSeconds":60,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":" platform-web-core"}},"strategy":{ [...]
  creationTimestamp: "2025-01-28T01:13:18Z"
  generation: 1
  labels:
    app:  platform-web-core
    tier: backend
  name: platform-web-core
  namespace: platform
  resourceVersion: "3632646"
  uid: 1c53b643-2b92-45fb-83d8-bda06434c97e
spec:
  progressDeadlineSeconds: 60
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app:  platform-web-core
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app:  platform-web-core
    spec:
      containers:
      - image: vishwasraiborde19/platform-web-core:latest
        imagePullPolicy: Always
        name:  platform-web-core-container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-01-28T01:13:21Z"
    lastUpdateTime: "2025-01-28T01:13:21Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-01-28T01:13:18Z"
    lastUpdateTime: "2025-01-28T01:13:21Z"
    message: ReplicaSet " platform-web-core-d76686f58" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
