.kube/platform-web-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-web-core-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  selector:
    app: my-first-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
