.kube/platform-web-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  platform-web-core-ingress
  namespace: platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: platform-web-core-svc
                port:
                  number: 8080
